--- a/package.json
+++ b/package.json
@@ -9,18 +9,28 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.5",
+    "@tailwindcss/forms": "^0.5.9",
+    "clsx": "^2.1.1",
+    "daisyui": "^4.12.13",
+    "framer-motion": "^11.9.0",
+    "next": "^14.2.15",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.13"
+    "react-icons": "^5.3.0",
+    "react-type-animation": "^3.2.0",
+    "swiper": "^11.1.14",
+    "tailwind-merge": "^2.5.2"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@types/next": "^9.0.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.7",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.13"
+    "typescript": "^5"
   }
 }
